# GameQT

./: .gitignore  ChartInterfaces.h  README.md
BoostClientServer/: CMakeLists.txt  Client.h  ClientPlayer.h  Common.h  Game.h  Interfaces.h  Server-old.h  Server.h  test.cpp
BoostClientServer-old/: CMakeLists.txt  Client.h  Server.h  client.cpp  server.cpp
Client/: Client.cpp  Client.sln  Client.vcxproj
Game/: CMakeLists.txt  CircleWidget.h  QtClientPlayer.h  Scene.h  client.cpp  main.cpp  server.cpp
Game/BoostClientServer/: CMakeLists.txt  ClientPlayer.h  Game.h  Interfaces.h  Server.h  TcpClient.h  test.cpp
GameQt/: GameQt.sln  GameQt.vcxproj  GameQt.vcxproj.filters  main.cpp  mainwindow.cpp
Server/: Server.cpp  Server.sln  Server.vcxproj
doc/: ClassDiagram.drawio
